--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,17 +13,29 @@
         android:layout_marginLeft="16dp"
         android:text="URL:"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="37dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.016" />
 
     <EditText
         android:id="@+id/txtUrl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="305dp"
+        android:layout_height="59dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="http://www.mocky.io/v2/59a94ceb100000200c3e0a78"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="25dp" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnLoadImg"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.285" />
 
     <Button
         android:id="@+id/btnLoadImg"
@@ -33,7 +45,7 @@
         android:text="Button"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="87dp" />
+        tools:layout_editor_absoluteY="78dp" />
 
     <TextView
         android:id="@+id/textView2"
